fix text-align on middle range screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,14 +11,16 @@
 @media (max-width: 767px) {
     .hero-unit {
         padding: 20px;
+        text-align: center;
+    }
+
+    .top-logo {
+        width: 300px;
+        height: 200px;
     }
 }
 
 @media (max-width: 480px) {
-    .hero-unit {
-        text-align: center;
-    }
-
     .top-logo {
         display: none;
     }
